# openclaw_bridge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
openclaw_bridge/: api.py  hooks.py  install.py  modules.txt
openclaw_bridge/bridge/: __init__.py  auth.py  db.py  logging_setup.py  mcp.py  rate_limit.py  settings.py  sql_guard.py
openclaw_bridge/tests/: test_rate_limit.py  test_sql_guard.py
scripts/: create_readonly_user.sql  rotate_site_db_creds.md
