[project]
name = "openclaw_bridge"
authors = [{ name = "Unitrade", email = "admin@nasirkhan.org" }]
description = "Readonly analytics bridge for OpenClaw via MCP"
requires-python = ">=3.11"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "pymysql>=1.1.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openclaw_bridge*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = ["E501", "B904"]
